--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.2.1",
+    "classnames": "^2.3.2",
     "next": "^13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,7 +29,7 @@
     "eslint-config-next": "^13.4.1",
     "postcss": "^8.4.21",
     "prettier": "^2.8.6",
-    "prettier-plugin-tailwindcss": "^0.2.6",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.2"
   },
