--- a/package.json
+++ b/package.json
@@ -9,30 +9,31 @@
     "start": "next start"
   },
   "dependencies": {
-    "@t3-oss/env-nextjs": "^0.2.1",
+    "@t3-oss/env-nextjs": "^0.6.0",
     "classnames": "^2.3.2",
     "next": "^13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
+    "react-icons": "^4.10.1",    
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/eslint": "^8.21.3",
-    "@types/node": "^18.15.5",
-    "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
+    "@types/eslint": "^8.40.2",
+    "@types/node": "^20.3.2",
+    "@types/prettier": "^2.7.3",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.36.0",
-    "eslint-config-next": "^13.4.1",
-    "postcss": "^8.4.21",
+    "eslint": "^8.43.0",
+    "eslint-config-next": "^13.4.7",
+    "postcss": "^8.4.24",
     "prettier": "^2.8.6",
     "prettier-plugin-tailwindcss": "^0.3.0",
+    "semver": "^7.5.3",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.1.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.13.0"
